# Claude-Local

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: attachments.py  conversations.py  health.py  models.py  uploads.py
backend/app/services/: anthropic_client.py  file_types.py  message_builder.py
backend/tests/: conftest.py  test_conversations.py  test_health.py  test_messages.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.setup.ts
frontend/__tests__/: Composer.test.tsx  MarkdownRenderer.test.tsx  sse.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/c/[id]/: page.tsx
frontend/components/: ChatPane.tsx  CodeBlock.tsx  Composer.tsx  MarkdownRenderer.tsx  MessageList.tsx  ModelPicker.tsx  NewConversationRedirect.tsx  Sidebar.tsx  SystemPromptEditor.tsx  ThemeProvider.tsx
frontend/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  switch.tsx  textarea.tsx
frontend/lib/: api.ts  sse.ts  useChat.ts
frontend/types/: api.ts
